# cpp_r-type

./: CMakeLists.txt  Geometry.cpp  Geometry.hpp  QuadTree.cpp  QuadTree.hpp  R-Type.sln  README.md  Rectangle.hpp  Timer.cpp  Timer.hpp  i2Vector.cpp  i2Vector.hpp  main.cpp  t2Vector.hpp  test.cpp
Data/: level1.xml
Doc/: RFC.txt
R-Type/: R-Type.vcxproj  R-Type.vcxproj.filters
R-Type/Debug/: vc140.idb
R-Type/Debug/R-Type.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  R-Type.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
R-Type/x64/Debug/: vc140.idb
R-Type/x64/Debug/R-Type.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  R-Type.lastbuildstate
SFML/: CMakeLists.txt  CreateRoomMenu.cpp  CreateRoomMenu.h  Gameplay.cpp  Gameplay.h  InfoMenu.cpp  InfoMenu.h  JoinRoomMenu.cpp  JoinRoomMenu.h  MainMenu.cpp  MainMenu.h  WaitingRoom.cpp  WaitingRoom.h  a.out  clie  lol  main.cpp
Source/: Makefile  clie_test.cpp  editor.cpp  main.cpp  main_client.cpp  serv_test.cpp  test.cpp
Source/Editor/: EditorEntity.cpp  EditorEntity.h  EditorMonster.cpp  EditorMonster.h  OnEditor.cpp  OnEditor.h
Source/GameEngine/: AnimationEntity.hpp  Artifices.cpp  Artifices.h  BBException.cpp  BBException.hpp  Explosion.cpp  Explosion.h  GameData.cpp  GameData.h  GameRoom.cpp  GameRoom.hpp  Gameplay.h  Geometry.cpp  Geometry.hpp  IGameplay.h  IMonsterBehaviour.h  IMutex.hpp  ISocket.cpp  ISocket.h  IThread.hpp  Instruction.cpp  Instruction.h  Laser.cpp  Laser.h  Level.cpp  Level.h  LinuxMutex.hpp  LinuxSocket.cpp  LinuxSocket.h  LinuxThread.hpp  Monster.cpp  Monster.h  MutexVault.cpp  MutexVault.hpp  Object.cpp  Object.h  OnLevel.cpp  OnLevel.h  Packet.cpp  Packet.h  (+28 more)
Source/Monsters/: BasicShip.cpp  BasicShip.h  Meteora.cpp  Meteora.h  Nautilus.cpp  Nautilus.h  Robot.cpp  Robot.h
Source/System/: Animation.cpp  Animation.h  RTypeException.cpp  RTypeException.h  ResourcesBank.cpp  ResourcesBank.h  WinCriticalSession.hpp  WinMutex.hpp  WinSocket.cpp  WinSocket.h  WinThread.hpp  window.cpp  window.h
